ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vningress
  labels:
    app: vningress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-ss-service
            port:
              number: 80
      - path: /flask
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
